--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <!-- Nav Bar Start -->
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
       <div class="container-fluid">
+        <img src="./img/poverty favicon.png" alt="povertty favicon" style="height:50px;width:50px">
         <a href="index.html" class="navbar-brand">Poverty Eradication</a>
         <button
           type="button"
